# auth-service/cmd/server.go
@@ -1,8 +1,11 @@
 package main
 
 import (
+	"auth-service/core/enums"
 	logs "auth-service/core/logger"
 	"auth-service/core/middleware"
+	"auth-service/internal/admin/services"
+	transport3 "auth-service/internal/admin/transport"
 	"auth-service/internal/auth/repositories/interfaces"
 	servicesInterfaces "auth-service/internal/auth/services/interfaces"
 	"auth-service/internal/auth/transport"
@@ -22,6 +25,7 @@ import (
 type ServerManager struct {
 	authHandlers            transport.HTTPAuthHandlers
 	designerProfileHandlers transport2.HTTPDesignerProfileHandlers
+	adminHandlers           transport3.HTTPAdminHandlers
 	middleware              middleware.AuthMiddleware
 	logger                  logs.Logger
 }
@@ -29,12 +33,14 @@ type ServerManager struct {
 func NewServerManager(tokenService servicesInterfaces.TokenService,
 	userService servicesInterfaces.UserService,
 	designerProfileService profileServiceInterfaces.DesignerProfileService,
+	adminService services.AdminService,
 	tokenManager interfaces.TokenManager,
 	ctx context.Context,
 	logger logs.Logger) ServerManager {
 	return ServerManager{
 		authHandlers:            transport.NewHTTPAuthHandler(tokenService, tokenManager, userService, ctx, logger),
 		designerProfileHandlers: transport2.NewHTTPDesignerProfileHandlers(designerProfileService, ctx, logger),
+		adminHandlers:           transport3.NewHTTPAdminHandlers(adminService, ctx, logger),
 		middleware:              middleware.NewAuthMiddleware(tokenManager),
 		logger:                  logger,
 	}
@@ -50,56 +56,86 @@ func (s *ServerManager) StartServer() {
 		Path("/auth/register").
 		Methods("POST").
 		HandlerFunc(
-			http.HandlerFunc(s.authHandlers.HandleRegister),
+			s.authHandlers.HandleRegister,
 		)
 
 	router.
 		Path("/auth/login").
 		Methods("POST").
 		HandlerFunc(
-			http.HandlerFunc(s.authHandlers.HandleLogin),
+			s.authHandlers.HandleLogin,
 		)
 
 	router.
 		Path("/auth/refresh").
 		Methods("POST").
 		HandlerFunc(
-			s.middleware.Auth(http.HandlerFunc(s.authHandlers.HandleRefresh)),
+			s.middleware.RequireRole(
+				enums.User,
+				http.HandlerFunc(s.authHandlers.HandleRefresh)),
 		)
 
 	router.
 		Path("/auth/logout").
 		Methods("POST").
 		HandlerFunc(
-			s.middleware.Auth(http.HandlerFunc(s.authHandlers.HandleLogout)),
+			s.middleware.RequireRole(
+				enums.User,
+				http.HandlerFunc(s.authHandlers.HandleLogout)),
 		)
 
 	router.
 		Path("/designer_profiles/me").
 		Methods("POST").
 		HandlerFunc(
-			s.middleware.Auth(http.HandlerFunc(s.designerProfileHandlers.HandleCreateMyDesignerProfile)),
+			s.middleware.RequireRole(
+				enums.Designer,
+				http.HandlerFunc(s.designerProfileHandlers.HandleCreateMyDesignerProfile)),
 		)
 
 	router.
 		Path("/designer_profiles/me").
 		Methods("GET").
 		HandlerFunc(
-			s.middleware.Auth(http.HandlerFunc(s.designerProfileHandlers.HandleGetMyDesignerProfile)),
+			s.middleware.RequireRole(
+				enums.Designer,
+				http.HandlerFunc(s.designerProfileHandlers.HandleGetMyDesignerProfile)),
 		)
 
 	router.
 		Path("/designer_profiles/me").
 		Methods("PATCH").
 		HandlerFunc(
-			s.middleware.Auth(http.HandlerFunc(s.designerProfileHandlers.HandleUpdateMyDesignerProfile)),
+			s.middleware.RequireRole(
+				enums.Designer,
+				http.HandlerFunc(s.designerProfileHandlers.HandleUpdateMyDesignerProfile)),
 		)
 
 	router.
 		Path("/designer_profiles/me").
 		Methods("DELETE").
 		HandlerFunc(
-			s.middleware.Auth(http.HandlerFunc(s.designerProfileHandlers.HandleDeleteMyDesignerProfile)),
+			s.middleware.RequireRole(
+				enums.Designer,
+				http.HandlerFunc(s.designerProfileHandlers.HandleDeleteMyDesignerProfile)),
+		)
+
+	router.
+		Path("/role/{user_id}").
+		Methods("PATCH").
+		HandlerFunc(
+			s.middleware.RequireRole(
+				enums.Admin,
+				http.HandlerFunc(s.adminHandlers.HandleChangeRole)),
+		)
+
+	router.
+		Path("/role/{user_id}").
+		Methods("GET").
+		HandlerFunc(
+			s.middleware.RequireRole(
+				enums.Admin,
+				http.HandlerFunc(s.adminHandlers.HandleGetRole)),
 		)
 
 	err := http.ListenAndServe(":9011", router)
